k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shield
  labels:
    name: shield
    app.kubernetes.io/name: shield
    app.kubernetes.io/component: security-scanner
